Fix spacing when discount label is at the top right corner (#864)

--- a/src/molecules/SubscriptionAccordion/SubscriptionAccordion.pcss
+++ b/src/molecules/SubscriptionAccordion/SubscriptionAccordion.pcss
@@ -10,10 +10,6 @@
 
   &__extra-margin {
     margin-top: 2rem;
-
-    @media all and (min-width: 37.5em) {
-      margin-top: 1rem;
-    }
   }
 
   &__header {
